# compassarch

./: .gitignore  README.md  distro.conf
archiso/calamares-modules/: CMakeLists.txt
archiso/calamares-modules/adjoinjob/: main.py  module.desc
archiso/calamares-modules/adjoinview/: ADJoinQmlViewStep.cpp  ADJoinQmlViewStep.h  CMakeLists.txt  Config.cpp  Config.h  adjoinview.qml  adjoinview.qrc
archiso/calamares-modules/adjoinview/translations/: adjoinview_fr.ts
archiso/profile/: packages.x86_64  pacman.conf  profiledef.sh
archiso/profile/airootfs/etc/: nsswitch.conf  pacman.conf  realmd.conf
archiso/profile/airootfs/etc/NetworkManager/conf.d/: dns.conf
archiso/profile/airootfs/etc/calamares/: settings.conf
archiso/profile/airootfs/etc/calamares/branding/compass-arch/: branding.desc  show.qml
archiso/profile/airootfs/etc/calamares/modules/: bootloader.conf  displaymanager.conf  initcpiocfg.conf  removeuser.conf  services-systemd.conf  shellprocess-copykernel.conf  shellprocess-fixmkinitcpio.conf  shellprocess-removearchisoconf.conf  shellprocess-removeliveartifacts.conf  unpackfs.conf  users.conf  welcome.conf
archiso/profile/airootfs/etc/default/: grub
archiso/profile/airootfs/etc/pam.d/: system-auth
archiso/profile/airootfs/etc/sddm.conf.d/: 10-wayland-default.conf  20-liveuser-autologin.conf
archiso/profile/airootfs/etc/skel/Desktop/: install-distro.desktop
archiso/profile/airootfs/root/: customize_airootfs.sh
archiso/profile/airootfs/usr/share/plymouth/themes/compass-arch/: compass-arch.plymouth  compass-arch.script
archiso/profile/airootfs/usr/share/wallpapers/CompassArch/: metadata.json
docs/: AD-JOIN-MODULE.md  ARCHITECTURE.md  BUILD.md
local-repo/: build-local-repo.sh
local-repo/GPG/: local-repo-key.README
test/: run-qemu.sh
tools/: rename-distro.sh
tools/lib/: strings.sh
